
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int uint32_t ;


 int crc32_adjust (int ,int const) ;

uint32_t crc32_calculate(const uint8_t *data, size_t length)
{
   size_t i;
   uint32_t checksum = ~0;
   for (i = 0; i < length; i++)
      checksum = crc32_adjust(checksum, data[i]);
   return ~checksum;
}
